--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>model</module>
+		<module>service-api</module>
+		<module>service</module>
+		<module>dao-api</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
