--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 		<module>service-api</module>
 		<module>service</module>
 		<module>dao-api</module>
+        <module>rest-app</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
