--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,7 +21,11 @@
             <groupId>com.epam.brest</groupId>
             <artifactId>service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.epam.brest</groupId>
+            <artifactId>dao</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
